
--Salary now based on a percentage of house value, but caps out at a fixed
  amount for houses with value greater than 10,000.

--Brand new houses are kept off the robbable list for 5 minutes from the time
  they are created by the server.  This reduces the prevalance of throw-away
  houses and also thwarts two-account collaboration where one account quickly
  dumps starting money to the other.




Version 15   2013-July-23

--Fixed recording and playback of Alt-tab behavior in recordedGames.

--Changed noise generator (for house tile visual effect) to use a static seed
  (ensures pixel-consistent appearance across multiple plays).

--Fixed way of bypassing login block (pause and unpause) when version update
  needed (thanks Alex Diamond).

--Fixed bug in dogs stepping next to dead dogs that are next to other dead dogs
  (thanks Ludicrosity).

--Added a visual status display to make Ctrl-click eyedropper functionality
  more apparent.




Version 14   Live Server Fixes

--Fixed simulation mismatch (resulting in 'House checkin failed' after robbery)
  caused by salary paid during robbery, which flipped the vault state from
  empty to not empty before the end of the robbery.





Version 14   2013-July-12

--Animals now avoid stepping next to other dead animals, unless the animal is
  player-seeking and the player is standing there.  This makes it harder to use
  the dead body of one dog as a safe spot from which to club other dogs.

--Fixed bug where placing a vault or family member on top of an object
  (removing that object) was not adjusting the current cost-of-changes display
  (thanks Paciferal).




Version 13   Live Server Fixes

--Changed cost of steel walls to 30, wired wood walls to 15, and torch to 300.

--Added a retry-transaction work-around for a server database deadlock in
  endEditHouse.




Version 13   2013-July-9

--Fixed a crash that occurred when the user mistakenly launched the v12 game
  application from the v11 folder (thanks Paciferal).
